--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+a:www.jaemv.net, a:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 25px;
+  text-align: center; 
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
