--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-a:www.jaemv.net, a:visited {
+<head>
+<"http://www.jaemv.net" rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+a:link, a:visited {
   background-color: #f44336;
   color: white;
   padding: 14px 25px;
