--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<head>
-<"http://www.jaemv.net" rel="stylesheet" type="text/css" href="mystyle.css">
-
-a:link, a:visited {
-  background-color: #f44336;
-  color: white;
-  padding: 14px 25px;
-  text-align: center; 
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: red;
-}
-</head>
+Hola! 
