--- a/thementalitycheck.html
+++ b/thementalitycheck.html
@@ -48,7 +48,7 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
-	<link rel="stylesheet" id="all-css-0-1" href="style.css" type="text/css" media="all">
+	<link rel="stylesheet" id="all-css-0-1" href="jennisvicente.github.io/syntax-wpcom/style.css" type="text/css" media="all">
 <style id="wpcom-admin-bar-inline-css" type="text/css">
 
 			.admin-bar {
