--- a/ETL-Allergy-Free/AllRests.html
+++ b/ETL-Allergy-Free/AllRests.html
@@ -21,7 +21,7 @@
 				<h2><strong>Restaurants in Mexico</strong> </h2>
 				<p>
             <ul class="actions">
-                <li><a href="file:///Users/useruser/ETL-Allergy-Free/templated-typify/index.html" class="button special">Home</a></li>
+                <li><a href="https://jennisvicente.github.io/ETL-Allergy-Free/templated-typify/index.html" class="button special">Home</a></li>
               </ul>
           <table border="1" class="dataframe" >
             <thead>
@@ -818,7 +818,7 @@
         </p> 
 				
 				<ul class="actions">
-					<li><a href="file:///Users/useruser/ETL-Allergy-Free/templated-typify/index.html" class="button special">Home</a></li>
+					<li><a href="https://jennisvicente.github.io/ETL-Allergy-Free/templated-typify/index.html" class="button special">Home</a></li>
 				</ul>
 			</section>
 
