--- a/ETL-Allergy-Free/cv.html
+++ b/ETL-Allergy-Free/cv.html
@@ -18,7 +18,7 @@
           <h2><strong>Allergy-Friendly Restaurants in Cuernavaca</strong> </h2>
           <p></p>
           <ul class="actions">
-              <li><a href="file:///Users/useruser/ETL-Allergy-Free/templated-typify/index.html" class="button special">Home</a></li>
+              <li><a href="https://jennisvicente.github.io/ETL-Allergy-Free/templated-typify/index.html" class="button special">Home</a></li>
           </ul>
       </section>
   <section>
